--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "illuminate/support": "5.1.*|5.2.*|5.3.*"
     },
     "require-dev": {
-        "illuminate/pagination": "5.1.*|5.2.*|5.3.*",
+        "illuminate/pagination": "5.1.*|5.2.*|5.3.*|5.4.*",
         "phpunit/phpunit": "~4.0",
         "mockery/mockery": "~0.9",
         "squizlabs/php_codesniffer": "~2.0"
